force-app/main/default/objects/Login_Session__c/Login_Session__c.object-meta.xml
<CustomObject>
    <label>Login Session</label>
    <nameField>
        <displayFormat>LS-{0000}</displayFormat>
        <label>Login Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LoginSession</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>