force-app/main/default/objects/Login_Session__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LoginSession</relationshipLabel>
    <relationshipName>LoginSession</relationshipName>
    <type>Lookup</type>
</CustomField>