force-app/main/default/objects/Login_Session__c/fields/Last_Hit_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Hit_Time__c</fullName>
    <label>Last Hit Time</label>
    <type>DateTime</type>
</CustomField>