force-app/main/default/objects/Login_Session__c/fields/Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Logged_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logged In?</label>
    <type>Checkbox</type>
</CustomField>