force-app/main/default/objects/Login_Session__c/fields/Session_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Time__c</fullName>
    <label>Session Time</label>
    <type>DateTime</type>
</CustomField>